syntax = "proto3";

option go_package = "./proto";

service GreetService{
rpc SayHello (NoParam) returns (HelloResponse);
rpc SayHelloServerSideStreaming (NamesList) returns (stream HelloResponse);
rpc SayHelloClientSideStreaming (stream HelloRequest) returns (MessageList);
}

message NoParam{};

message HelloResponse{
    string message = 1;
}

message NamesList{
    repeated string names = 1;
}

message HelloRequest{
    string name = 1;
}

message MessageList{
    repeated string messages = 1;
}
